--- a/product-service/src/main/resources/application.yaml
+++ b/product-service/src/main/resources/application.yaml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: product-resource-server
   security:
     oauth2:
       resourceserver:
@@ -7,10 +9,3 @@ spring:
 
 server:
   port: 9191
-
-# Enable this for debugging
-#logging:
-#  level:
-#    org:
-#      springframework:
-#        security: DEBUG
